parse/src/snapshots/ninja_parse__test__success.snap
---
source: parse/src/lib.rs
expression: repr
---
Description {
    builds: [
        Build {
            action: Phony,
            inputs: [
                [
                    115,
                    111,
                    117,
                    114,
                    99,
                    101,
                    46,
                    116,
                    120,
                    116,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    97,
                    46,
                    116,
                    120,
                    116,
                ],
            ],
        },
        Build {
            action: Command(
                "clang",
            ),
            inputs: [
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                    46,
                    99,
                ],
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                    46,
                    104,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                    46,
                    111,
                ],
            ],
        },
        Build {
            action: Command(
                "link.exe",
            ),
            inputs: [
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                    46,
                    111,
                ],
                [
                    109,
                    121,
                    95,
                    115,
                    104,
                    97,
                    114,
                    101,
                    100,
                    95,
                    108,
                    105,
                    98,
                    46,
                    115,
                    111,
                ],
            ],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    104,
                    101,
                    108,
                    108,
                    111,
                ],
            ],
        },
    ],
    defaults: None,
}
